# sysu-2025-2-robotics-intro

./: .gitignore  README.md
lab/01/: Dockerfile  docker-compose.yaml
lab/01/catkin_ws/src/four_wheel_diff_car/: CMakeLists.txt  package.xml
lab/01/catkin_ws/src/four_wheel_diff_car/launch/: bringup.launch  display.launch  gazebo.launch
lab/01/catkin_ws/src/four_wheel_diff_car/rviz/: four_wheel_diff_car.rviz
lab/01/catkin_ws/src/four_wheel_diff_car/scripts/: keyboard_teleop.py  simple_diff_drive_controller.py
lab/01/catkin_ws/src/four_wheel_diff_car/urdf/: four_wheel_diff_car.xacro
lab/01/report/: report.typ
lab/01/scripts/: entrypoint.sh
lab/02/: Dockerfile  README.md  docker-compose.yaml
lab/02/catkin_ws/src/tracking_pid/launch/: lab02_demo.launch
lab/02/catkin_ws/src/tracking_pid/src/: controller.cpp
lab/02/catkin_ws/src/tracking_pid/trajectories/: coverage_map.yaml
lab/02/report/: report.typ
lab/02/scripts/: entrypoint.sh
lab/03/: Dockerfile  docker-compose.yaml
lab/03/catkin_ws/src/Robot-Planner/: CMakeLists.txt  package.xml
lab/03/catkin_ws/src/Robot-Planner/launch/: obs_world.launch
lab/03/catkin_ws/src/Robot-Planner/maps/: gazebo_map.pgm  gazebo_map.yaml
lab/03/catkin_ws/src/Robot-Planner/scripts/: controller.py  gazebo_to_tf.py  planner.py
lab/03/catkin_ws/src/random_map_generator/: CMakeLists.txt  final.rviz  package.xml
lab/03/catkin_ws/src/random_map_generator/launch/: spawn_obstacles.launch
lab/03/catkin_ws/src/random_map_generator/src/: spawn_obstacles.py
lab/03/report/: report.typ
lab/03/scripts/: entrypoint.sh
(+2 files in other folders)
